<resources>
    <string name="app_name">Сделано в оренбургской области</string>
    <string name="app_version">Pre-alpha 1.0</string>
    <string name="author">Гура Дмитрий Денисович</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstAbzPuh"><b>1.Традиции и история:</b> Оренбург славится своими богатыми традициями в области пухового искусства, которые уходят корнями в 18 век. Оренбургские мастера в течение веков разрабатывали и совершенствовали узоры и техники вязки, что сделало их изделия уникальными.</string>
    <string name="secondAbzPuh"><b>2.Уникальные материалы:</b> Оренбургские платки и палантины изготавливаются из натурального пуха горных коз, который считается одним из самых тонких и легких материалов для вязки. Этот материал придает изделиям неповторимую мягкость и теплоту.</string>
    <string name="thirdAbzPuh"><b>3.Узоры и дизайн:</b> Одним из ключевых элементов оренбургских изделий являются узоры, которые вырабатываются вручную мастерами. Эти узоры могут быть очень сложными и красивыми, что делает изделия узнаваемыми и желанными.</string>
    <string name="fourthAbzPuh"><b>4.Популярность:</b> Оренбургские пуховые платки и палантины популярны не только в России, но и за её пределами. Они часто становятся предметом подарков и коллекционирования.</string>
    <string name="fifthAbzPuh"><b>5.Защита бредна:</b> Оренбургская пуховая промышленность подвержена защите с целью предотвращения подделок и сохранения высокого качества продукции.</string>
    <string name="title_activity_orsk_maso_kombinat">OrskMasoKombinatActivity</string>
    <string name="nagradaOrskMasoKombinat"><u>За образцовое выполнение заданий правительства предприятие в январе 1944 года было награждено орденом Трудового Красного Знамени.</u>></string>
    <string name="fisrtAbzMilk"><b>1.Традиции: </b> Завод имеет богатую историю, охватывающую десятилетия. Он был основан в начале 20-го века и с тех пор оставался ключевым игроком на рынке молочной продукции.</string>
    <string name="secondAbzMilk"><b>2.Овечье и козье молоко: </b> Завод специализируется на переработке овечьего и козьего молока, что делает его уникальным, поскольку большинство молочных заводов фокусируются на коровьем молоке. Это позволяет производить такие продукты, как оренбургские пуховые платки и другие деликатесы.</string>
    <string name="thirdAbzMilk"><b>3.Высокое качество: </b> Оренбургский молочный завод стремится поддерживать высшие стандарты качества продукции. Он известен своими деликатными и натуральными молочными изделиями, которые ценятся как внутри России, так и за её пределами.</string>
    <string name="fourthAbzMilk"><b>4.Экологичность: </b> Молочный завод также уделяет внимание вопросам экологии и устойчивости, стараясь снижать негативное воздействие на окружающую среду.</string>
    <string name="firstAbzPark"><b>1.Памятники Великой Отечественной войны: </b>Парк украшен памятниками и мемориалами, посвященными событиям Великой Отечественной войны. Здесь часто проводятся торжественные мероприятия в честь Дня Победы.</string>
    <string name="secondAbzPark"><b>2.Архитектурные элементы: </b>Парк оформлен архитектурными композициями, которые символизируют патриотизм и героизм советского народа в годы войны.</string>
    <string name="thirdAbzPark"><b>3.Зоны отдыха: </b>Помимо своего исторического значения, Парк Победы также служит местом отдыха для горожан и посетителей. Здесь можно прогуливаться по аллеям, наслаждаться природой и проводить время на открытых площадках.</string>
    <string name="fistAbzIriklin"><b>1.Цель создания: </b>Водохранилище было создано в 1970-1980-х годах в рамках строительства Ириклинской ГЭС (гидроэлектростанции) на реке Ириклинка. Основная цель - регулирование водного режима реки, водоснабжение, орошение сельского хозяйства и энергетика.
</string>
    <string name="secondAbzIriklin"><b>2.Площадь и объем:</b>Водохранилище имеет значительную площадь и объем. Это позволяет накапливать воду в периоды паводков и обеспечивать водоснабжение и орошение в более сухие периоды.</string>
    <string name="thirdAbzIriklin"><b>3.Озеро и рекреационные возможности: </b>Водохранилище образует большое и живописное искусственное озеро. Оно привлекает туристов и отдыхающих своей красотой и возможностями для активного отдыха, таких как рыбалка, плавание, пикники и водные виды спорта.</string>
    <string name="fourthAbzIriklin"><b>4.Экологическое значение: </b>Ириклинское водохранилище также играет важную роль в сохранении экологического равновесия в регионе. Оно создает условия для сохранения и восстановления растительности и водных видов животных.</string>
    <string name="fifthAbzIriklin"><b>5.Роль в развитии региона: </b>Водохранилище способствует развитию сельского хозяйства и производства электроэнергии, что имеет важное экономическое значение для Оренбургской области.</string>
    <string name="thirdAbzClothBashkir"><b>Сарык:</b> Традиционная башкирская мужская и женская кожанная обувь.Различают сарык с простой и сложной орнаментацией.</string>
    <string name="secondAbzClothBashkir"><b>Елян:</b> верхняя длиннополоая одежда на подкладе, с руквами. В основном носили нараспашку, реже подвязывая поясом.</string>
    <string name="firstAbzClothBashkir"><b>Бурек:</b>традиционный головной убор. Этот головной убор носится как символ национальной идентичности и культурного наследия, и его форма и дизайн могут различаться в зависимости от региона и традиций.</string>
    <string name="firstBashkirHistory"><b>Башкирская культура:</b> это удивительное и многогранное явление, обогащенное вековыми традициями, уникальным языком, искусством, и образом жизни народа, проживающего в Республике Башкортостан, расположенной на перекрестке Европы и Азии. Глубоко уважаемые и бережно хранимые обычаи, яркие национальные костюмы, богатая кулинарная традиция и богатое музыкальное наследие делают башкирскую культуру неповторимой и удивительно привлекательной для тех, кто стремится понять и оценить многообразие культурного мира. Давайте погрузимся в этот мир и познакомимся с его интереснейшими аспектами.</string>
    <string name="firstBashkirHoliday"><b>Сабантуй:</b> Этот праздник также отмечается башкирами, подобно татарской культуре. Сабантуй - это яркий и веселый праздник, который связан с окончанием сельскохозяйственных работ и включает в себя национальные гуляния, игры, танцы, соревнования и традиционную еду.</string>
    <string name="secondBashkirHoliday"><b>Сахилау:</b> Это традиционное башкирское празднование встречи весны. В ходе праздника проводятся песни, танцы и национальные обряды.</string>
    <string name="thirdBaskirHoliday"><b>Ураза-байрам:</b> Этот праздник, как и в других мусульманских культурах, отмечает окончание месяца Рамадан и является важным для башкирского народа.</string>
    <string name="fourthBashkirHoliday"><b>Каргатуй:</b> башкирский праздник, посвященный прилету грачей. В переводе с башкирского этот день так и называется – «Грачиная свадьба».</string>
    <string name="fifthBashkirHoliday"><b>Йыйын:</b>это исконный, очень древний праздник именно этого народа. Отмечается он в день летнего солнцестояния. Праздник произошел из народного собрания, на котором решались все важные вопросы общины. Участвовали в нем только мужчины, позже эта традиция была ослаблена.</string>
    <string name="firstBashkirKitchen"><b>Шурпа:</b> Это суп, приготовленный из мяса (чаще всего баранины или говядины), картофеля, лука и моркови. Шурпа обычно приправляется специями, такими как кинза и перец, что придает ему насыщенный вкус.</string>
    <string name="secondBashkirKitchen"><b>Чак-чак:</b> Это сладкое блюдо, приготовленное из меда и теста, высушенного в маленькие кусочки. Чак-чак украшают орехами и иногда посыпают сахаром или корицей</string>
    <string name="thirdBashkirKitchen"><b>Карась бастыры:</b> Блюдо из рыбы, обжаренной в тесте. Оно имеет хрустящую корку и нежное мясо внутри.</string>
    <string name="fourthBashkirKitchen"><b>Кумыс:</b> Это ферментированное молоко, являющееся популярным напитком среди башкир. Оно получается из кобыльего молока и имеет характерный кисловатый вкус.</string>
    <string name="firstKazakCloth"><b>Чапан (шапан):</b> Чапан - это длинное пальто с широкими рукавами, которое традиционно носилось как верхняя одежда. Оно может быть разнообразных цветов и украшено вышивкой или узорами.</string>
    <string name="secondKazakCloth"><b>Камзол:</b>Камзол - это жилет, который носится поверх рубашки или майки. Камзолы могут быть изготовлены из различных материалов и украшены узорами и вышивкой.</string>
    <string name="thirdKazakCloth"><b>Шаль (тайга):</b> Шали носят в качестве головного убора или как шарф. Они обычно выполнены в традиционных узорах и служат как украшение и защита от холода.</string>
    <string name="forthKazakCloth"><b>Тюбетейка (шапка):</b> Тюбетейка - это традиционная шапка с круглой формой и жестким верхом. Она может быть украшена накладными узорами и шнурками.</string>
    <string name="firstKazakHistory"><b>Казахская культура:</b> представляет собой удивительное слияние вековых традиций и современности в центральной Азии. Это наследие богато историей, музыкой, искусством и языком, отражая глубокие корни казахского народа и его связь с многими другими культурами. В этом введении мы рассмотрим ключевые аспекты казахской культуры, которые оформили ее неповторимый характер и влияние на жизнь людей в Оренбургской области и за ее пределами.</string>
    <string name="firstKazakHoliday"><b>Наурыз Мейрам (Новруз байрам):</b> Это праздник весны и обновления, который отмечается в марте. Наурыз Мейрам связан с традиционными ритуалами и праздничными блюдами.</string>
    <string name="secondKazakHoliday"><b>День астаны:</b> Этот праздник отмечается 6 июля и посвящен Дню Столицы Казахстана, города Нур-Султан (ранее Астана). В этот день проводятся праздничные мероприятия и фестивали.</string>
    <string name="thirdKazakHoliday"><b>Рамадан и Курбан Айт:</b> Эти религиозные праздники отмечаются мусульманами в Казахстане. Рамазан байрамы, также известный как Ураза Айт, отмечается после месяца Рамадан и связан с постом и молитвой. Күйір айымыз мейрамы (Курбан Айт) отмечается после жертвоприношения и является одним из главных праздников ислама.</string>
    <string name="firstKazakKitchen"><b>Бешбармак:</b> Это одно из национальных блюд Казахстана. Оно включает в себя куски мяса (обычно говядины или ягненка), приготовленные вместе с тестом. Блюдо обычно подается с луком и соусом.</string>
    <string name="secondKazakKitchen"><b>Манты:</b> Это большие паровые пельмени, обычно с начинкой из мяса и лука. Манты часто подаются с кетчупом или острым соусом.</string>
    <string name="thirdKazakKitchen"><b>Самсы:</b> Это похожие на пирожки блюда, обычно с начинкой из мяса и лука. Самсы можно приготовить, как жареные, так и запеченные.</string>
    <string name="fourthKazakKitchen"><b>Баурсак:</b> Это традиционное казахское печенье, которое обычно выпекается в форме узелков или квадратов. Баурсак подаются на праздниках и особых событиях.</string>
    <string name="fifthKazakKitchen"><b>Кумыс и Шубат::</b> Казахстан славится своими молочными продуктами, такими как кумыс (конское молоко) и шубат (верблюжье молоко). Эти напитки популярны среди казахов и считаются полезными.</string>
    <string name="historyTatar"><b>Татарская культура:</b> это богатое и многогранное явление, которое пронизывает и обогащает историю и множество регионов России. Народ татар, с его богатой историей, традициями и языком, играет значительную роль в мозаике культурной палитры этой страны. Исходя из своего многовекового наследия, татарская культура олицетворяет сочетание восточных и западных влияний, что придает ей уникальный характер и неповторимую привлекательность. В данном контексте мы погрузимся в богатый мир Татарской культуры, рассмотрим ее ключевые аспекты, традиции и влияние на современное общество.</string>
</resources>