<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgForms"
    tools:context=".BashkirHolidayFrag">

    <ScrollView
        android:id="@+id/myview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/zag"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            >

            <TextView

                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:text="Праздники башкирской культуры"
                android:fontFamily="sans-serif-black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView7"
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/firstBashkirHoliday"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:src="@drawable/sabantui2"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/secondBashkirHoliday"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView22" />

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="200dp"
                android:layout_height="140dp"
                android:src="@drawable/saxilay"
                app:layout_constraintStart_toStartOf="@+id/textView31"
                app:layout_constraintTop_toBottomOf="@+id/textView31" />

            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"


                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/thirdBaskirHoliday"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView23" />

            <ImageView
                android:id="@+id/imageView24"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:src="@drawable/urzabashkir"
                app:layout_constraintStart_toStartOf="@+id/textView32"
                app:layout_constraintTop_toBottomOf="@+id/textView32" />

            <TextView
                android:id="@+id/textView33"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/fourthBashkirHoliday"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView24" />

            <ImageView
                android:id="@+id/imageView25"
                android:layout_width="220dp"
                android:layout_height="150dp"
                android:src="@drawable/karagantui"
                app:layout_constraintStart_toStartOf="@+id/textView33"
                app:layout_constraintTop_toBottomOf="@+id/textView33" />

            <TextView
                android:id="@+id/textView34"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"

                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="@string/fifthBashkirHoliday"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView25" />

            <ImageView
                android:id="@+id/imageView26"
                android:layout_width="225dp"
                android:layout_height="140dp"
                android:src="@drawable/iiin"
                app:layout_constraintStart_toStartOf="@+id/textView34"
                app:layout_constraintTop_toBottomOf="@+id/textView34" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:text="Эти праздники отражают культурное богатство и традиции башкирского народа, и они играют важную роль в сохранении и передаче культурного наследия этой культуры."
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView26" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>